2008-12-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb: Add persistent connection support.
	Patch #18180 by Aaron Patterson.

2008-02-14  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/fetch_command.rb: Fix a bug when fetching
	from non-default sources.  Report non-existent gems instead of
	crashing.

2008-01-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/update_command.rb: Use portable and safe ENV
	operation.  Patch by usa in ruby SVN revision 14739.
	* lib/rubygems/open-uri.rb: Fix tests.  Patch by NARUSE Yui.
	[ruby-dev:33336]

2007-12-23  Eric Hodel  <drbrain@segment7.net>

	* util/gem_prelude.rb:  Remove methods from Gem, not QuickLoader, to
	fix warnings.

2007-12-22  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/environment_command.rb:  Put GEM PATHS in the
	correct order.
	* lib/rubygems/commands/uninstall_command.rb:  Add --install-dir to
	specify which local repository to uninstall from.  Patch #15151 by
	Donavan Pantke.
	* lib/rubygems/uninstaller.rb:  Only allow uninstallation of gems from
	specified directory.  Properly clean up executables on uninstall.
	Patch #15151 by Donavan Pantke.
	* lib/rubygems/install_update_options.rb:  Add --no-env-shebang
	option.  Patch #16508 by Donavan Pantke.
	* util/gem_prelude.rb:  Use require to load rubygems.rb to make
	$LOADED_FEATURES correct on RubyGems update.

2007-12-21  Eric Hodel  <drbrain@segment7.net>

	* util/gem_prelude.rb:  Place bin before lib so bin stubs work.

2007-12-20  Eric Hodel  <drbrain@segment7.net>

	* Rakefile:  Require Ruby > 1.8.2.  Enable CERT_DIR.
	* lib/rubygems.rb:  Work with RbConfig and Config.  Bug #16457 by
	Christian Ramilo, John Barnette.
	* lib/rubygems/commands/build_command.rb:  Relax yaml? test to work
	with Ruby 1.8.3.
	* lib/rubygems/rubygems_version.rb:  1.0.1.
	* doc/release_notes/rel_1_0_1.rdoc:  RubyGems 1.0.1 release notes.

2007-12-19  Eric Hodel  <drbrain@segment7.net>
